--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -45,13 +45,13 @@
         border-radius: 7px;
         transition: ease-in-out .2s;
         &:hover {
-          // border: 3px solid $yellow;
           box-shadow: 1px 5px 10px rgb(0, 0, 0, .5);
           opacity: .9;
         }
       }
 
     }
+    margin-bottom: 50px;
   }
 }
 
