--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -20,6 +20,7 @@
       text-align: center;
       margin: 0;
       border: none;
+      color: $darkest;
       &:visited {
         color: inherit;
       }
