--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -23,3 +23,18 @@
     }
   }
 }
+
+@media (max-width: 500px) {
+  .contact {
+    .contact-hero {
+      h1 {
+        padding-bottom: 10px;
+        font-size: 24px;
+      }
+      div {
+        font-size: 16px;
+        padding: 5px 0;
+      }
+    }
+  }
+}
