--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -67,9 +67,10 @@
 //   }
 // }
 
-@media (max-width: 500px) {
+@media (max-width: 900px) {
   .landing-page {
     .hero {
+      height: 40vh;
       .hero-content {
         h1 {
           font-size: 30px;
